--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -12,7 +12,7 @@
             border: 1px solid black;
         }
     </style>
-    <title>tunnelto inspector</title>
+    <title>portal inspector</title>
 </head>
 <body>
     <section class="hero">
